[project]
name = "theine"
version = "2.0.0"
description = "high performance in-memory cache"
authors = [{ name = "Yiling-J", email = "njjyl723@gmail.com" }]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typing-extensions>=4.4.0,<5",
    "theine-core",
    "zstandard>=0.24.0.dev0",
]

[dependency-groups]
bench = [
    "matplotlib>=3.9.4",
    "scipy>=1.13.1",
    "zstandard>=0.24.0.dev0",
    "theine-core>=2.0.0rc1,<3"
]
dev = [
    "pytest>=7.2.1,<8",
    "pytest-benchmark>=4.0.0,<5",
    "typing-extensions>=4.4.0,<5",
    "mypy>=1.11.1,<2",
    "django~=4.2",
    "pytest-django>=4.5.2,<5",
    "pytest-asyncio>=0.20.3,<0.21",
    "cachetools>=5.5.0,<6",
    "types-cachetools>=5.3.0.0,<6",
    "isort>=5.5.0,<6",
    "py-spy>=0.3.14,<0.4",
    "cacheout>=0.14.1,<0.15",
    "bounded-zipf>=1.0.0,<2",
    "django-stubs[compatible-mypy]>=5.1.3,<6",
]

[tool.uv]

[tool.uv.sources]
zstandard = {git="https://github.com/dpdani/python-zstandard.git", branch="feature/3.13t" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
plugins = ["mypy_django_plugin.main"]
exclude = [
    "benchmarks",
    "tests"
]

[tool.django-stubs]
django_settings_module = 'tests.adapters.settings.theine'
strict_settings = false
